[package]
name = "runner-nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.23"
hmac = "0.12.1"
hyper = { version = "0.14", features = ["full"] }
log = "0.4.17"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.2"
systemd = "0.10.0"
tokio = { version = "1.20.1", features = ["full"] }
