[package]
name = "runner-nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.15", features = ["derive"] }
env_logger = "0.9.1"
futures = "0.3.24"
hmac = "0.12.1"
hyper = { version = "0.14", features = ["full"] }
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
systemd = "0.10.0"
tokio = { version = "1.21.2", features = ["full"] }
